test/files/neg/t9912b.check
t9912.scala:6: error: name clash between defined and inherited member:
def compareTo(o: java.util.List[_]): Int in class Comparer and
def compareTo(other: java.util.List[A]): Int at line 6
have same type after erasure: (o: java.util.List): Int
  def compareTo(other: java.util.List[A]): Int = 0
      ^
1 error
